# opencode-ui

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
assets/icons/macos/: AppIcon.icns
docs/superpowers/plans/: 2026-07-10-tauri-release-updates.md
scripts/: generate-icons.sh
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
