[package]
name = "opencode-ui"
version = "0.1.0"
description = "Desktop shell for the local OpenCode web UI"
authors = ["pausegarra"]
license = "MIT"
edition = "2021"
rust-version = "1.78"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
